--- a/bus_ticketing_app/pubspec.yaml
+++ b/bus_ticketing_app/pubspec.yaml
@@ -2,7 +2,7 @@ name: bus_ticketing_app
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-294.0.dev <4.0.0'
+  sdk: ">=3.1.0-294.0.dev <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,14 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.0.0
   flutter_barcode_scanner: ^2.0.0
-
+  flutter_svg: ^2.0.7
+  image_picker: ^1.0.4
+  logger: ^2.0.2+1
+  provider: ^6.0.5
+  cloud_firestore: ^4.9.1
+  firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
+  firebase_storage: ^11.2.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -55,16 +60,28 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo.svg
+    - assets/ic_instagram.svg
+    - assets/userLogin.svg
+    - assets/Welcome.svg
+    - assets/SignUp.jpg
+    - assets/background.png
+    - assets/home.svg
+    - assets/chat.svg
+    - assets/add.svg
+    - assets/menu.svg
+    - assets/search.svg
+    - assets/addRequest.svg
+    - assets/feedback.svg
+    - assets/message.svg
+    - assets/saved.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
