--- a/bus_ticketing_app/pubspec.yaml
+++ b/bus_ticketing_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.9.0
   firebase_core: ^2.15.1
   firebase_storage: ^11.2.6
+  http: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
