--- a/bus_ticketing_app/pubspec.yaml
+++ b/bus_ticketing_app/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
+assets:
     - assets/logo.svg
     - assets/ic_instagram.svg
     - assets/userLogin.svg
@@ -83,7 +83,15 @@ flutter:
     - assets/feedback.svg
     - assets/message.svg
     - assets/saved.svg
-
+    - assets/qrcode.svg
+    - assets/profile.svg
+    - assets/wallet.svg
+    - assets/topup.svg
+    - assets/history.svg
+    - assets/qrscanner.svg
+    - assets/bell.svg
+    - assets/details.svg
+    - assets/passenger.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
